--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap-grid.min.css">
   <!-- AOS CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+  <!-- Bootstrap Carousel Testimonials -->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -277,120 +279,68 @@
 
   <!-- Contact -->
   <div class="contact module me-turquoise" id="contact">
-    <div class="speechBubble me-white-bg" id="speechBubble" style="transform: scale(0.75);">
-      <span>Let's make<br> something <br> <strong>awesome</strong> <br> together</span>
-    </div>
-
 
     <!-- Testimonials -->
-    <section class="text-center my-5">
-      <!-- Heading -->-->
-      <h2 class="h1-responsive font-weight-bold my-5">Testimonials</h2>
-      <div class="wrapper-carousel-fix">
-        <!-- Carousel Wrapper -->
-        <div id="carousel-example-1" class="carousel no-flex testimonial-carousel slide carousel-fade" data-ride="carousel"
-          data-interval="false">
-          <!--Slides-->
-          <div class="carousel-inner" role="listbox">
-            <!--First slide-->
-            <div class="carousel-item active">
-              <div class="testimonial">
-                <!--Avatar-->
-                <div class="avatar mx-auto mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).webp" class="rounded-circle img-fluid"
-                    alt="First sample avatar image">
-                </div>
-                <!--Content-->
-                <p>
-                  <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
-                  eos
-                  id officiis hic tenetur quae quaerat ad velit ab. Lorem ipsum dolor sit amet, consectetur
-                  adipisicing elit. Dolore cum accusamus eveniet molestias voluptatum inventore laboriosam labore
-                  sit, aspernatur praesentium iste impedit quidem dolor veniam.
-                </p>
-                <h4 class="font-weight-bold">Anna Deynah</h4>
-                <h6 class="font-weight-bold my-3">Founder at ET Company</h6>
-                <!--Review-->
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star-half-alt blue-text"> </i>
-              </div>
-            </div>
-            <!--First slide-->
-            <!--Second slide-->
-            <div class="carousel-item">
-              <div class="testimonial">
-                <!--Avatar-->
-                <div class="avatar mx-auto mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).webp" class="rounded-circle img-fluid"
-                    alt="Second sample avatar image">
-                </div>
-                <!--Content-->
-                <p>
-                  <i class="fas fa-quote-left"></i> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-                  odit
-                  aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
-                  porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia
-                  non numquam eius modi tempora incidunt ut labore. </p>
-                <h4 class="font-weight-bold">Maria Kate</h4>
-                <h6 class="font-weight-bold my-3">Photographer at Studio LA</h6>
-                <!--Review-->
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-              </div>
-            </div>
-            <!--Second slide-->
-            <!--Third slide-->
-            <div class="carousel-item">
-              <div class="testimonial">
-                <!--Avatar-->
-                <div class="avatar mx-auto mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).webp" class="rounded-circle img-fluid"
-                    alt="Third sample avatar image">
-                </div>
-                <!--Content-->
-                <p>
-                  <i class="fas fa-quote-left"></i> Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                  culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus
-                  error sit voluptatem accusantium doloremque laudantium.</p>
-                <h4 class="font-weight-bold">John Doe</h4>
-                <h6 class="font-weight-bold my-3">Front-end Developer in NY</h6>
-                <!--Review-->
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-                <i class="fas fa-star blue-text"> </i>
-                <i class="far fa-star blue-text"> </i>
-              </div>
-            </div>
-            <!--Third slide-->
+    <div class="col-lg-10 offset-lg-1 pt-5 pb-5 bg-dark text-light">
+      <div id="client-testimonial-carousel" class="carousel slide" data-ride="carousel" style="height:200px;">
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active text-center p-4">
+            <blockquote class="blockquote text-center">
+              <p class="mb-0"><i class="fa fa-quote-left"></i> Everybody is a genius. But if you judge a fish by its ability to climb a tree, it will live its whole life believing that it is stupid.
+              </p>
+              <footer class="blockquote-footer">Albert Einstein <cite title="Source Title">genius</cite></footer>
+              <!-- Client review stars -->
+              <!-- "fas fa-star" for a full star, "far fa-star" for an empty star, "far fa-star-half-alt" for a half star. -->
+              <p class="client-review-stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                <i class="far fa-star"></i>
+              </p>
+            </blockquote>
           </div>
-          <!--Slides-->
-          <!--Controls-->
-          <a class="carousel-control-prev left carousel-control" href="#carousel-example-1" role="button"
-            data-slide="prev">
-            <span class="icon-prev" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next right carousel-control" href="#carousel-example-1" role="button"
-            data-slide="next">
-            <span class="icon-next" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-          <!--Controls-->
+          <div class="carousel-item text-center p-4">
+            <blockquote class="blockquote text-center">
+              <p class="mb-0"><i class="fa fa-quote-left"></i> Imagination is more important than knowledge. Knowledge is limited. Imagination encircles the world.
+              </p>
+              <footer class="blockquote-footer">Albert Einstein <cite title="Source Title">genius</cite></footer>
+              <!-- Client review stars -->
+              <!-- "fas fa-star" for a full star, "far fa-star" for an empty star, "far fa-star-half-alt" for a half star. -->
+              <p class="client-review-stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </p>
+            </blockquote>
+          </div>
+          <div class="carousel-item text-center p-4">
+            <blockquote class="blockquote text-center">
+              <p class="mb-0"><i class="fa fa-quote-left"></i> A person who never made a mistake never tried anything new.
+              </p>
+              <footer class="blockquote-footer">Albert Einstein <cite title="Source Title">genius</cite></footer>
+              <!-- Client review stars -->
+              <!-- "fas fa-star" for a full star, "far fa-star" for an empty star, "far fa-star-half-alt" for a half star. -->
+              <p class="client-review-stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </p>
+            </blockquote>
+          </div>
         </div>
-        <!-- Carousel Wrapper -->
+        <ol class="carousel-indicators">
+          <li data-target="#client-testimonial-carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#client-testimonial-carousel" data-slide-to="1"></li>
+          <li data-target="#client-testimonial-carousel" data-slide-to="2"></li>
+        </ol>
       </div>
-
-    </section>
+    </div>
     <!-- End Testimonials -->
-
 
     <p class="name-and-mail me-white-text me-text-center"><span><b>Kevin</b> Gil</span><br>kevingil23@gmail.com</p>
     <div class="social-icons me-text-center">
